Rename vulkan_tools.hpp to vulkan_utils.hpp for consistency with log_utils.hpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ set(headers
     src/stack.hpp
     src/threads.hpp
     src/types.hpp
-    src/vulkan_tools.hpp
+    src/vulkan_utils.hpp
 )
 
 set(sources
