Link at function level, use AVX instructions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,11 +47,11 @@ if (WIN32)
 endif()
 
 if (MSVC)
-    set(CMAKE_CXX_FLAGS         "/W4 /EHsc /GR- /permissive- /std:c++latest /fp:fast /Zi /MP")
-    set(CMAKE_CXX_FLAGS_RELEASE "/MT  /O2 /Ob2 /Oi /Ot /Oy /GL /FA")
+    set(CMAKE_CXX_FLAGS         "/W4 /EHsc /GR- /permissive- /std:c++latest /fp:fast /Zi /MP /Zc:rvalueCast /arch:AVX")
+    set(CMAKE_CXX_FLAGS_RELEASE "/MT  /O2 /Ob2 /Oi /Ot /Oy /GL /FA /Gy")
     set(CMAKE_CXX_FLAGS_DEBUG   "/MTd /Od /Ob0")
 
     set(CMAKE_EXE_LINKER_FLAGS         "/machine:x64 /map")
-    set(CMAKE_EXE_LINKER_FLAGS_RELEASE "/debug:fastlink /INCREMENTAL:NO /LTCG /opt:ref")
+    set(CMAKE_EXE_LINKER_FLAGS_RELEASE "/debug:fastlink /INCREMENTAL:NO /LTCG /opt:ref /opt:icf")
     set(CMAKE_EXE_LINKER_FLAGS_DEBUG   "/debug          /INCREMENTAL")
 endif()
