Build for AVX2 systems.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,7 @@ if (WIN32)
 endif()
 
 if (MSVC)
-    set(CMAKE_CXX_FLAGS         "/W4 /EHsc /GR- /permissive- /std:c++latest /fp:fast /Zi /MP /Zc:rvalueCast /arch:AVX")
+    set(CMAKE_CXX_FLAGS         "/W4 /EHsc /GR- /permissive- /std:c++latest /fp:fast /Zi /MP /Zc:rvalueCast /arch:AVX2")
     set(CMAKE_CXX_FLAGS_RELEASE "/MT  /O2 /Ob2 /Oi /Ot /Oy /GL /FA /Gy")
     set(CMAKE_CXX_FLAGS_DEBUG   "/MTd /Od /Ob0")
 
