Add scope_guard Remove unused file Use scope_guard to bring exception-safety to spsc_ring_buffer Allow  individual entries in spsc_ring_buffer to be aligned on cache lines.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set(headers
     src/compile_time_utilities.hpp
     src/cpuid.hpp
     src/log_utils.hpp
+    src/scope_guard.hpp
     src/simd_primitives.hpp
     src/spsc_queue.hpp
     src/spsc_ring_buffer.hpp
