Add benchmark for spsc_ring_buffer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,22 @@ cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
 
 project(RawInputTest)
 
+set(CMAKE_CONFIGURATION_TYPES Debug Release)
+
+if (MSVC)
+    set(CMAKE_CXX_FLAGS         "/W4 /EHsc /GR- /permissive- /std:c++latest /fp:fast /Zi /MP /Zc:rvalueCast /arch:AVX2")
+    set(CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS} /wd4324")
+    set(CMAKE_CXX_FLAGS_RELEASE "/MT  /O2 /Ob2 /Oi /Ot /Oy /GL /FA /Gy /DNDEBUG")
+    set(CMAKE_CXX_FLAGS_DEBUG   "/MTd /Od /Ob0 /D_DEBUG")
+
+    set(CMAKE_EXE_LINKER_FLAGS         "/machine:x64 /map")
+    set(CMAKE_EXE_LINKER_FLAGS_RELEASE "/debug:fastlink /INCREMENTAL:NO /LTCG /opt:ref /opt:icf")
+    set(CMAKE_EXE_LINKER_FLAGS_DEBUG   "/debug          /INCREMENTAL")
+endif()
+
 find_package(Vulkan 1.1 REQUIRED)
 add_subdirectory(ext/glm EXCLUDE_FROM_ALL)
+add_subdirectory(ext/benchmark bin)
 
 set(headers
     src/aligned_alloc.hpp
@@ -45,8 +59,6 @@ add_executable(RawInputTest WIN32
     ${sources}
 )
 
-set(CMAKE_CONFIGURATION_TYPES Debug Release)
-
 target_include_directories(RawInputTest PRIVATE Vulkan::Vulkan)
 target_link_libraries(RawInputTest Vulkan::Vulkan glm)
 
@@ -55,13 +67,8 @@ if (WIN32)
     target_link_libraries(RawInputTest PowrProf.lib)
 endif()
 
-if (MSVC)
-    set(CMAKE_CXX_FLAGS         "/W4 /EHsc /GR- /permissive- /std:c++latest /fp:fast /Zi /MP /Zc:rvalueCast /arch:AVX2")
-    set(CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS} /wd4324")
-    set(CMAKE_CXX_FLAGS_RELEASE "/MT  /O2 /Ob2 /Oi /Ot /Oy /GL /FA /Gy")
-    set(CMAKE_CXX_FLAGS_DEBUG   "/MTd /Od /Ob0")
-
-    set(CMAKE_EXE_LINKER_FLAGS         "/machine:x64 /map")
-    set(CMAKE_EXE_LINKER_FLAGS_RELEASE "/debug:fastlink /INCREMENTAL:NO /LTCG /opt:ref /opt:icf")
-    set(CMAKE_EXE_LINKER_FLAGS_DEBUG   "/debug          /INCREMENTAL")
-endif()
+add_executable(RingBufferBenchmark
+    test/RingBufferBenchmark.cpp
+)
+target_link_libraries(RingBufferBenchmark benchmark)
+target_include_directories(RingBufferBenchmark PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
